--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
 decorator==5.1.1
+defusedxml==0.7.1
 et-xmlfile==1.1.0
 exceptiongroup==1.0.0rc9
 executing==1.1.1
@@ -22,6 +23,7 @@ jedi==0.18.1
 matplotlib-inline==0.1.6
 mypy-extensions==0.4.3
 numpy==1.23.3
+odfpy==1.4.1
 openpyxl==3.0.10
 outcome==1.2.0
 packaging==22.0
@@ -59,5 +61,4 @@ trio==0.22.0
 trio-websocket==0.9.2
 urllib3==1.26.12
 wcwidth==0.2.5
-webdriver-manager==3.8.5
 wsproto==1.2.0
