--- a/ss-api/Dockerfile
+++ b/ss-api/Dockerfile
@@ -17,4 +17,4 @@ RUN apt install -y python3-pip && \
 
 COPY . .
 
-CMD uvicorn --host 0.0.0.0 --port $PORT main:asgi_app
+CMD uvicorn --host 0.0.0.0 --port $PORT main:asgi_app --timeout-keep-alive 120
