--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,3 +1,5 @@
+ARG PORT=8080
+
 FROM golang:1.21-alpine AS builder
 
 WORKDIR /app
@@ -14,4 +16,6 @@ COPY --from=builder /app/nff /
 COPY --from=builder /app/internal/views /internal/views/
 COPY --from=builder /app/internal/static /internal/static/
 
-CMD [ "./nff" ]
+EXPOSE $PORT
+
+CMD [ "PORT=$PORT ./nff" ]
