feat: add global hx-indicator when switching pages

--- a/web/docker-compose.yaml
+++ b/web/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
       - PORT=8080
       - DB_URL=postgres://nff:nff@db:5432/nff
       - DEBUG=true
+      - PREFORK=true
     ports:
       - 8080:8080
     volumes:
