feat: use redis to keep track of req status
- just on the same page

--- a/web/docker-compose.yaml
+++ b/web/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
       - POSTGRES_DB=nff
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./internal/sql/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./internal/db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   rdb:
     container_name: nff-rdb
