--- a/ss-api/docker-compose.yaml
+++ b/ss-api/docker-compose.yaml
@@ -5,6 +5,9 @@ services:
     container_name: ss-api
     environment:
       - PORT=5000
+      - AWS_ACCESS_KEY_ID=''
+      - AWS_SECRET_ACCESS_KEY=''
+      - AWS_S3_BUCKET_NAME=nff-pdfs
     ports:
       - 5000:5000
     tty: true
