--- a/ss-api/requirements.txt
+++ b/ss-api/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 attrs==23.1.0
 blinker==1.6.2
+boto3==1.29.2
+botocore==1.32.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
@@ -10,13 +12,19 @@ h11==0.14.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.3
 outcome==1.2.0
 packaging==23.1
+pybrowsers==0.5.2
 PySocks==1.7.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+pyxdg==0.28
 requests==2.31.0
+s3transfer==0.7.0
 selenium==4.12.0
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 trio==0.22.2
