--- a/ss-api/docker-compose.yaml
+++ b/ss-api/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     container_name: ss-api
     environment:
       - PORT=5000
-      - AWS_ACCESS_KEY_ID=''
-      - AWS_SECRET_ACCESS_KEY=''
+      - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
       - AWS_S3_BUCKET_NAME=nff-pdfs
     ports:
       - 5000:5000
