Revert "refact: use env variables in another way"
This reverts commit cc999e747a4cb0437d7589c122a083daf68465d1.

--- a/web/docker-compose.yaml
+++ b/web/docker-compose.yaml
@@ -5,11 +5,9 @@ services:
     container_name: nff-web
     build:
       context: .
-      dockerfile: ${NFF_DOCKERFILE:-Dockerfile.dev}
+      dockerfile: Dockerfile.dev
     environment:
       - PORT=8080
-      - DEBUG=${NFF_DEBUG:-false}
-      - PREFORK=${NFF_PREFORK:-false}
       - DB_URL=postgres://nff:nff@db:5432/nff
       - REDIS_URL=redis://rdb:6379/0
       - SS_API_BASE_URL=https://nff-ss-api-dev.up.railway.app
