--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Connect to EC2 instance and deploy
         run: |
-          ssh -o StrictHostKeyChecking=no -i ${{ secrets.EC2_SSH_PRIVATE_KEY }} ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
+          ssh -o StrictHostKeyChecking=no ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
           sudo docker pull $WEB_IMAGE_TAG
           sudo docker pull $MIGRATIONS_IMAGE_TAG
           sudo docker compose up --build migrations
