--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -46,8 +46,11 @@ jobs:
           ssh -o StrictHostKeyChecking=no ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
           sudo docker pull $WEB_IMAGE_TAG
           sudo docker pull $MIGRATIONS_IMAGE_TAG
-          ls -a
-          cd ~
+          pwd
+          echo "FIRST LS" && ls -a
+          cd /home/ubuntu
+          pwd
+          echo "SECOND LS" && ls -a
           ls -a
           sudo docker compose up --build migrations
           sudo docker compose down web
