--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -43,9 +43,10 @@ jobs:
 
       - name: Connect to EC2 instance and deploy
         run: |
-          ssh -o StrictHostKeyChecking=no ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
+          ssh -o StrictHostKeyChecking=no -l ubuntu ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
           sudo docker pull $WEB_IMAGE_TAG
           sudo docker pull $MIGRATIONS_IMAGE_TAG
+          whoami
           pwd
           echo "FIRST LS" && ls -a
           cd /home/ubuntu
