--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -37,22 +37,18 @@ jobs:
       MIGRATIONS_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd-goose:${{ github.sha }}
     steps:
       - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        run: |
+          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/nff-key-pair.pem
+          chmod 600 ~/.ssh/nff-key-pair.pem
 
       - name: Connect to EC2 instance and deploy
         run: |
-          ssh -o StrictHostKeyChecking=no -l ubuntu ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/nff-key-pair.pem ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
           sudo docker pull $WEB_IMAGE_TAG
           sudo docker pull $MIGRATIONS_IMAGE_TAG
           whoami
           pwd
           echo "FIRST LS" && ls -a
-          su - ubuntu
-          whoami
-          pwd
-          echo "SECOND LS" && ls -a
           cd /home/ubuntu
           pwd
           echo "THIRD LS" && ls -a
