--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -38,12 +38,12 @@ jobs:
     steps:
       - name: Set up SSH key
         run: |
-          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/nff-key-pair.pem
-          chmod 600 ~/.ssh/nff-key-pair.pem
+          echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ./nff-key-pair.pem
+          chmod 600 ./nff-key-pair.pem
 
       - name: Connect to EC2 instance and deploy
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/nff-key-pair.pem ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
+          ssh -o StrictHostKeyChecking=no -i ./nff-key-pair.pem ubuntu@ec2-18-230-92-247.sa-east-1.compute.amazonaws.com
           sudo docker pull $WEB_IMAGE_TAG
           sudo docker pull $MIGRATIONS_IMAGE_TAG
           whoami
