--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -45,14 +45,14 @@ jobs:
             HOSTNAME: ${{ secrets.EC2_SSH_HOST }}
             USER_NAME: ${{ secrets.EC2_USER_NAME }}
         run: |
-          echo "$PRIVATE_KEY" > private_key.pem && chmod 600 private_key.pem
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} '
-            echo "LS" && ls -a &&
+          echo $PRIVATE_KEY > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} "
+            echo 'LS' && ls -a &&
             cd /home/ubuntu &&
-            echo "LS AGAIN" && ls -a &&
+            echo 'LS AGAIN' && ls -a &&
             sudo docker pull \"$WEB_IMAGE_TAG\" &&
             sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
             sudo docker compose up --build migrations &&
             sudo docker compose down web &&
             sudo docker compose up --build web &&
-          '
+          "
