--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -48,13 +48,4 @@ jobs:
 
       - name: Connect to EC2 instance and deploy
         run: |
-          ssh -o StrictHostKeyChecking=no ${USER_NAME}@${HOSTNAME} "
-            echo 'LS' && ls -a &&
-            cd /home/ubuntu &&
-            echo 'LS AGAIN' && ls -a &&
-            sudo docker pull \"$WEB_IMAGE_TAG\" &&
-            sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
-            sudo docker compose up --build migrations &&
-            sudo docker compose down web &&
-            sudo docker compose up --build web &&
-          "
+          ssh -o StrictHostKeyChecking=no ${USER_NAME}@${HOSTNAME} "ls"
