--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -35,6 +35,7 @@ jobs:
     env:
       WEB_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd:${{ github.sha }}
       MIGRATIONS_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd-goose:${{ github.sha }}
+      PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
       HOSTNAME: ${{ secrets.EC2_SSH_HOST }}
       USER_NAME: ${{ secrets.EC2_USER_NAME }}
     steps:
@@ -42,10 +43,19 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.8.0
-        with:
-          ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        run: |
+          echo "$PRIVATE_KEY" > private_key.pem
+          chmod 600 private_key.pem
 
       - name: Connect to EC2 instance and deploy
         run: |
-          ssh -o StrictHostKeyChecking=no ${USER_NAME}@${HOSTNAME} "ls"
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
+            echo 'LS' && ls -a &&
+            cd /home/ubuntu &&
+            echo 'LS AGAIN' && ls -a &&
+            sudo docker pull \"$WEB_IMAGE_TAG\" &&
+            sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
+            sudo docker compose up --build migrations &&
+            sudo docker compose down web &&
+            sudo docker compose up --build web
+          "
