--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -39,9 +39,6 @@ jobs:
       HOSTNAME: ${{ secrets.EC2_SSH_HOST }}
       USER_NAME: ${{ secrets.EC2_USER_NAME }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Set up SSH
         run: |
           echo "$PRIVATE_KEY" > private_key.pem
@@ -56,3 +53,6 @@ jobs:
             sudo docker compose down web &&
             sudo docker compose up --build -d web
           "
+
+      - name: Clean up private key
+        run: rm private_key.pem
