--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -52,7 +52,9 @@ jobs:
       - name: Connect to EC2 instance and deploy
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
-            sudo docker rmi \$(sudo docker image ls -q) --force &&
+            for image_id in \$(sudo docker image ls -q); do
+              sudo docker rmi \$image_id --force
+            done &&
             ./gen-compose.sh \"$WEB_IMAGE_TAG\" \"$MIGRATIONS_IMAGE_TAG\" &&
             sudo udo docker rmi $(sudo docker image ls -q) --forcedocker pull \"$WEB_IMAGE_TAG\" &&
             sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
