--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -50,17 +50,8 @@ jobs:
           chmod 600 private_key.pem
 
       - name: Connect to EC2 instance and deploy
-        run: |
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
-            sudo docker image prune --all --force &&
-            ./gen-compose.sh \"$WEB_IMAGE_TAG\" \"$MIGRATIONS_IMAGE_TAG\" &&
-            sudo docker pull \"$WEB_IMAGE_TAG\" &&
-            sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
-            sudo docker compose run --build --rm migrations &&
-            sudo docker compose down web &&
-            sudo docker image prune --all --force &&
-            sudo docker compose up --build -d web
-          "
+        working-directory: ./web
+        run: ./deploy.sh $WEB_IMAGE_TAG $MIGRATIONS_IMAGE_TAG $USER_NAME $HOSTNAME
 
       - name: Clean up private key
         run: rm private_key.pem
