--- a/web/docker-compose.yaml
+++ b/web/docker-compose.yaml
@@ -46,7 +46,7 @@ services:
       dockerfile: Dockerfile.goose
     environment:
       - DB_URL=postgres://nff:nff@db:5432/nff
-      - COMMAND=up
+      - CMD=up
     volumes:
       - ./internal/db/migrations/:/migrations
     depends_on:
