--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -55,10 +55,12 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
             sudo docker image prune --all --force &&
             ./gen-compose.sh \"$WEB_IMAGE_TAG\" \"$MIGRATIONS_IMAGE_TAG\" \"$RDS_DB_URL\" &&
-            sudo docker compose run --build --rm migrations &&
+            sudo docker pull \"$WEB_IMAGE_TAG\" &&
+            sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
+            sudo docker compose run --rm migrations &&
             sudo docker compose down web &&
             sudo docker image prune --all --force &&
-            sudo docker compose up --build -d web
+            sudo docker compose up -d web
           "
 
       - name: Clean up private key
