--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Run Migrations
         run: |
-          ls
+          docker run --rm -e CMD=up -e DB_URL=$RDS_DB_URL migrations
 
   # deploy:
   #   needs: migrate
