--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -34,51 +34,34 @@ jobs:
           docker push $WEB_IMAGE_TAG
           docker push $MIGRATIONS_IMAGE_TAG
 
-  migrate:
+  deploy:
     needs: build
     runs-on: ubuntu-latest
     env:
+      WEB_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd:${{ github.sha }}
       MIGRATIONS_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd-goose:${{ github.sha }}
+      PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+      HOSTNAME: ${{ secrets.EC2_SSH_HOST }}
+      USER_NAME: ${{ secrets.EC2_USER_NAME }}
       RDS_DB_URL: ${{ secrets.RDS_DB_URL }}
     steps:
-      - name: Docker login
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
-      - name: Pull Migrations image
-        run: docker pull $MIGRATIONS_IMAGE_TAG
-
-      - name: Run Migrations
+      - name: Set up SSH
         run: |
-          docker run --rm -e CMD=up -e DB_URL=$RDS_DB_URL $MIGRATIONS_IMAGE_TAG
+          echo "$PRIVATE_KEY" > private_key.pem
+          chmod 600 private_key.pem
 
-  # deploy:
-  #   needs: migrate
-  #   runs-on: ubuntu-latest
-  #   env:
-  #     WEB_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd:${{ github.sha }}
-  #     MIGRATIONS_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd-goose:${{ github.sha }}
-  #     PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-  #     HOSTNAME: ${{ secrets.EC2_SSH_HOST }}
-  #     USER_NAME: ${{ secrets.EC2_USER_NAME }}
-  #     RDS_DB_URL: ${{ secrets.RDS_DB_URL }}
-  #   steps:
-  #     - name: Set up SSH
-  #       run: |
-  #         echo "$PRIVATE_KEY" > private_key.pem
-  #         chmod 600 private_key.pem
+      - name: Connect to EC2 instance and deploy
+        run: |
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
+            sudo docker system prune -a --volumes &&
+            ./gen-compose.sh \"$WEB_IMAGE_TAG\" \"$MIGRATIONS_IMAGE_TAG\" \"$RDS_DB_URL\" &&
+            sudo docker pull \"$WEB_IMAGE_TAG\" &&
+            sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
+            sudo docker run --rm -e CMD=up -e DB_URL=$RDS_DB_URL $MIGRATIONS_IMAGE_TAG &&
+            sudo docker compose down web &&
+            sudo docker system prune -a --volumes &&
+            sudo docker compose up -d web
+          "
 
-  #     - name: Connect to EC2 instance and deploy
-  #       run: |
-  #         ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
-  #           sudo docker image prune --all --force &&
-  #           ./gen-compose.sh \"$WEB_IMAGE_TAG\" \"$MIGRATIONS_IMAGE_TAG\" \"$RDS_DB_URL\" &&
-  #           sudo docker pull \"$WEB_IMAGE_TAG\" &&
-  #           sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
-  #           sudo docker compose run --rm migrations &&
-  #           sudo docker compose down web &&
-  #           sudo docker image prune --all --force &&
-  #           sudo docker compose up -d web
-  #         "
-
-  #     - name: Clean up private key
-  #       run: rm private_key.pem
+      - name: Clean up private key
+        run: rm private_key.pem
