--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -54,7 +54,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
             sudo docker system prune -a --volumes &&
-            ./gen-compose.sh \"$WEB_IMAGE_TAG\" \"$MIGRATIONS_IMAGE_TAG\" \"$RDS_DB_URL\" &&
+            ./gen-compose.sh \"$WEB_IMAGE_TAG\" \"$RDS_DB_URL\" &&
             sudo docker pull \"$WEB_IMAGE_TAG\" &&
             sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
             sudo docker run --rm -e CMD=up -e DB_URL=$RDS_DB_URL $MIGRATIONS_IMAGE_TAG &&
