--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -53,14 +53,14 @@ jobs:
       - name: Connect to EC2 instance and deploy
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} "
-            sudo docker system prune -a --volumes &&
+            sudo docker system prune -af --volumes &&
             ./gen-compose.sh \"$WEB_IMAGE_TAG\" \"$RDS_DB_URL\" &&
             sudo docker pull \"$WEB_IMAGE_TAG\" &&
             sudo docker pull \"$MIGRATIONS_IMAGE_TAG\" &&
             sudo docker run --rm -e CMD=up -e DB_URL=$RDS_DB_URL $MIGRATIONS_IMAGE_TAG &&
             sudo docker compose down web &&
-            sudo docker system prune -a --volumes &&
-            sudo docker compose up -d web
+            sudo docker compose up -d web &&
+            sudo docker system prune -af --volumes
           "
 
       - name: Clean up private key
