--- a/ss-api/requirements.txt
+++ b/ss-api/requirements.txt
@@ -1,36 +1,24 @@
-asgiref==3.7.2
 attrs==23.1.0
-blinker==1.6.2
-boto3==1.29.2
-botocore==1.32.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.7
-exceptiongroup==1.1.3
-Flask==2.3.3
+boto3==1.34.7
+botocore==1.34.7
+certifi==2023.11.17
+charset-normalizer==3.3.2
 h11==0.14.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
+idna==3.6
 jmespath==1.0.1
-MarkupSafe==2.1.3
-outcome==1.2.0
-packaging==23.1
-pybrowsers==0.5.2
+outcome==1.3.0.post0
+packaging==23.2
 PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
-pyxdg==0.28
 requests==2.31.0
-s3transfer==0.7.0
-selenium==4.12.0
+s3transfer==0.10.0
+selenium==4.16.0
 six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
-trio==0.22.2
-trio-websocket==0.10.3
-urllib3==2.0.4
-uvicorn==0.23.2
-webdriver-manager==3.8.0
-Werkzeug==2.3.7
+trio==0.23.2
+trio-websocket==0.11.1
+urllib3==2.0.7
+webdriver-manager==4.0.1
 wsproto==1.2.0
