--- a/web/docker-compose.yaml
+++ b/web/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
       - PORT=8080
       - DB_URL=postgres://nff:nff@db:5432/nff
       - REDIS_URL=redis://rdb:6379/0
-      - SS_API_BASE_URL=https://nff-ss-api-dev.up.railway.app
+      - SS_API_BASE_URL=
     ports:
       - 8080:8080
     volumes:
