ops: use aws lambda with a docker image for ss-api
- THIS TIME IS FOR REAL
- credits to sls cli
- credits to a random dev with a nice template (https://github.com/umihico/docker-selenium-lambda)

--- a/ss-api/docker-compose.yaml
+++ b/ss-api/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
     ports:
       - 5000:5000
     tty: true
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     volumes:
       - ./:/app
