--- a/ss-api/Dockerfile
+++ b/ss-api/Dockerfile
@@ -6,14 +6,14 @@ RUN dnf install -y unzip && \
     unzip /tmp/chromedriver-linux64.zip -d /opt/ && \
     unzip /tmp/chrome-linux64.zip -d /opt/
 
-FROM public.ecr.aws/lambda/python@sha256:5f59359f025e159ac53ba7bc94d2d724b4d8fc0d5d17375b4b27fb70ae4fa15d
+FROM public.ecr.aws/lambda/python@sha256:5f59359f025e159ac53ba7bc94d2d724b4d8fc0d5d17375b4b27fb70ae4fa15d as prod
 
 RUN dnf install -y atk cups-libs gtk3 libXcomposite alsa-lib \
     libXcursor libXdamage libXext libXi libXrandr libXScrnSaver \
     libXtst pango at-spi2-atk libXt xorg-x11-server-Xvfb \
     xorg-x11-xauth dbus-glib dbus-glib-devel nss mesa-libgbm
 
-# setup pt-BR locale (used for curreny formatting)
+# setup pt-BR locale (used for currency formatting)
 RUN dnf -y install glibc-locale-source && dnf clean all
 
 RUN localedef -i pt_BR -f UTF-8 pt_BR.UTF-8
