--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -71,6 +71,7 @@ jobs:
               -p 80:8080 \
               -p 8080:8080 \
               -e PORT=8080 \
+              -e START_FRESH=true \
               -e DB_URL=$RDS_DB_URL \
               -e REDIS_URL=$ELASTICACHE_URL \
               -e SS_API_BASE_URL=$SS_API_BASE_URL \
