somewhat useless for now, but will be useful in the near future
- seeds has the purpose of populating a db with sample data
- maybe it could read from a file just like ss-api to grab real entity
  data, but for now this is OK
- later this will be used for testing purposes

--- a/web/.air.toml
+++ b/web/.air.toml
@@ -4,8 +4,8 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./bin/main"
-  cmd = "go build -o ./bin/main ./main.go"
+  bin = "./bin/nff"
+  cmd = "go build -o ./bin/nff ./cmd/web/main.go"
   delay = 500
   exclude_dir = ["assets", "tmp", "vendor", "bin", "testdata"]
   exclude_file = []
