ok maybe imperative is better

--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -34,7 +34,7 @@ jobs:
           docker push $WEB_IMAGE_TAG
           docker push $MIGRATIONS_IMAGE_TAG
 
-  migration:
+  migrate:
     needs: build
     runs-on: ubuntu-latest
     env:
