--- a/web/v2/Makefile
+++ b/web/v2/Makefile
@@ -3,8 +3,6 @@ PWD :=
 ENDPOINT := nff-db.ckwjgza1fp4o.sa-east-1.rds.amazonaws.com
 PORT := 5432
 DB_NAME := nff
-RDS_URL := postgres://$(USER)@$(ENDPOINT):$(PORT)/$(DB_NAME)
-RDS_URL_WITH_PWD := postgres://$(USER):$(PWD)@$(ENDPOINT):$(PORT)/$(DB_NAME)
 
 DIR_PATH := db/migrations
 NAME :=
@@ -13,10 +11,7 @@ TAILWIND_INPUT := ./static/styles/custom.css
 TAILWIND_OUTPUT := ./static/styles/tailwind.css
 
 rds:
-	docker run -it --rm -e PGPASSWORD=$(PWD) postgres psql $(RDS_URL)
-
-rds_rollback:
-	docker compose run -e CMD='down' -e DB_URL=$(RDS_URL_WITH_PWD) migrations
+	docker run -it --rm -e PGPASSWORD=$(PWD) postgres psql "postgres://$(USER)@$(ENDPOINT):$(PORT)/$(DB_NAME)"
 
 new_migration:
 	docker compose run -e CMD='create $(NAME) sql' migrations
