first page render with templ!
- migrations added
- project is up and running
- components/pages package
- fix bugs in database connection and docker stuff

--- a/web/v2/Dockerfile.dev
+++ b/web/v2/Dockerfile.dev
@@ -5,7 +5,8 @@ RUN apt update -y && \
 
 WORKDIR /home/app
 
-RUN go install github.com/cosmtrek/air@latest
+RUN go install github.com/cosmtrek/air@latest && \
+    go install github.com/a-h/templ/cmd/templ@latest
 
 COPY . .
 
