--- a/web/v2/.air.toml
+++ b/web/v2/.air.toml
@@ -6,10 +6,10 @@ tmp_dir = "tmp"
   args_bin = []
   bin = "./bin/nff"
   cmd = "templ generate && go build -o ./bin/nff ."
-  delay = 500
+  delay = 1000
   exclude_dir = ["assets", "tmp", "vendor", "bin", "testdata"]
   exclude_file = []
-  exclude_regex = ["_test.go"]
+  exclude_regex = ["_test.go", ".*_templ.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
@@ -40,5 +40,5 @@ tmp_dir = "tmp"
   clean_on_exit = false
 
 [screen]
-  clear_on_rebuild = true
+  clear_on_rebuild = false
   keep_scroll = true
