--- a/web/v2/docker-compose.yaml
+++ b/web/v2/docker-compose.yaml
@@ -1,8 +1,6 @@
-version: '3'
-
 services:
   web:
-    container_name: nff-web
+    container_name: nff-web-v2
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -21,7 +19,7 @@ services:
       - rdb
 
   db:
-    container_name: nff-db
+    container_name: nff-db-v2
     image: postgres:latest
     environment:
       - POSTGRES_USER=nff
@@ -31,7 +29,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   rdb:
-    container_name: nff-rdb
+    container_name: nff-rdb-v2
     image: redis:latest
     ports:
       - 6378:6379
@@ -39,7 +37,7 @@ services:
       - redis_data:/var/lib/redis/data
 
   migrations:
-    container_name: nff-migrations
+    container_name: nff-migrations-v2
     build:
       context: .
       dockerfile: Dockerfile.goose
@@ -47,7 +45,7 @@ services:
       - DB_URL=postgres://nff:nff@db:5432/nff
       - CMD=up
     volumes:
-      - ./db/migrations/:/migrations
+      - ./database/migrations/:/migrations
     depends_on:
       - db
 
