--- a/web/v2/Dockerfile.dev
+++ b/web/v2/Dockerfile.dev
@@ -10,6 +10,6 @@ RUN go install github.com/cosmtrek/air@latest && \
 
 COPY . .
 
-RUN go mod vendor
+RUN templ generate && go mod vendor
 
 CMD [ "air" ]
