--- a/web/v2/Dockerfile.dev
+++ b/web/v2/Dockerfile.dev
@@ -5,7 +5,7 @@ RUN apt update -y && \
 
 WORKDIR /home/app
 
-RUN go install github.com/cosmtrek/air@latest && \
+RUN go install github.com/air-verse/air@latest && \
     go install github.com/a-h/templ/cmd/templ@latest
 
 COPY . .
