feat: minor enhancements

--- a/web/v2/Dockerfile.dev
+++ b/web/v2/Dockerfile.dev
@@ -6,7 +6,7 @@ RUN apt update -y && \
 WORKDIR /home/app
 
 RUN go install github.com/air-verse/air@latest && \
-    go install github.com/a-h/templ/cmd/templ@latest
+    go install github.com/a-h/templ/cmd/templ@v0.2.707
 
 COPY . .
 
