--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -7,7 +7,7 @@ on:
       - main
       - develop # TEMP!
     paths:
-      - "web/**"
+      - "web/v2/**"
       - ".github/workflows/nff_web_build_and_deploy.yaml"
 
 jobs:
@@ -15,7 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       WEB_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd:${{ github.sha }}
-      MIGRATIONS_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd-goose:${{ github.sha }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,27 +23,27 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Build project image
-        working-directory: ./web
+        working-directory: ./web/v2
         run: docker build -t $WEB_IMAGE_TAG .
-
-      - name: Build goose image
-        working-directory: ./web
-        run: docker build -t $MIGRATIONS_IMAGE_TAG -f Dockerfile.goose .
 
       - name: Push images to Docker Hub
         run: |
           docker push $WEB_IMAGE_TAG
-          docker push $MIGRATIONS_IMAGE_TAG
 
   migrate:
     needs: build
     runs-on: ubuntu-latest
     env:
-      MIGRATIONS_IMAGE_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/nff-web-prd-goose:${{ github.sha }}
       RDS_DB_URL: ${{ secrets.RDS_DB_URL }}
     steps:
+      - name: Setup goose
+        uses: mscno/setup-goose@v1
+
       - name: Apply migrations
-        run: docker run -e CMD=up -e DB_URL=$RDS_DB_URL $MIGRATIONS_IMAGE_TAG
+        working-directory: ./web/v2
+        run: |
+          goose -dir ./database/migrations -v -s postgres $RDS_DB_URL up
+
 
   deploy:
     needs:
