build: include templ generate in prod dockerfile

--- a/web/v2/Dockerfile
+++ b/web/v2/Dockerfile
@@ -2,7 +2,11 @@ FROM golang:1.22-alpine AS builder
 
 WORKDIR /app
 
+RUN go install github.com/a-h/templ/cmd/templ@v0.2.707
+
 COPY . .
+
+RUN templ generate
 
 RUN go build -o nff ./main.go
 
