ci: add missing code checkout in migrate job

--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -36,6 +36,9 @@ jobs:
     env:
       RDS_DB_URL: ${{ secrets.RDS_DB_URL }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Setup goose
         uses: mscno/setup-goose@v1
 
