--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -82,6 +82,7 @@ jobs:
               -p 8080:8080 \
               -e PORT=8080 \
               -e START_FRESH=true \
+              -e TZ=America/Sao_Paulo \
               -e DB_URL=$RDS_DB_URL \
               -e REDIS_URL=$ELASTICACHE_URL \
               -e SS_API_BASE_URL=$SS_API_BASE_URL \
