--- a/.github/workflows/nff_web_build_and_deploy.yaml
+++ b/.github/workflows/nff_web_build_and_deploy.yaml
@@ -24,6 +24,12 @@ jobs:
         with:
          go-version: 1.22.5
 
+      - name: Generate templ code
+        working-directory: ./web
+        run: |
+          go install github.com/a-h/templ/cmd/templ@v0.2.747
+          templ generate -path ./ui
+
       - name: Build project binary
         working-directory: ./web
         run: |
